--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1097,28 +1097,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Toronto',\n",
-       " 'Archipelago Sea',\n",
-       " 'Iguazu Falls',\n",
+       "['Marakesh',\n",
        " 'Pyeongchang',\n",
-       " 'Los Cabos',\n",
-       " 'Buenos Aires',\n",
-       " 'Marakesh',\n",
+       " 'Archipelago Sea',\n",
+       " 'Solta',\n",
        " 'Greenville',\n",
-       " 'Albuquerque',\n",
-       " 'Salina Island',\n",
+       " 'Los Cabos',\n",
+       " 'Toronto',\n",
+       " 'Iguazu Falls',\n",
        " 'Walla Walla Valley',\n",
        " 'San Antonio',\n",
-       " 'Solta']"
+       " 'Salina Island',\n",
+       " 'Buenos Aires',\n",
+       " 'Albuquerque']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
